--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -24,13 +24,7 @@
         <input type="password" required="true" class="form-control" id="floatingPassword" placeholder="Senha"  name="password">
         <label for="floatingPassword">Senha</label>
       </div>
-
-      <div class="checkbox mb-3">
-        <label>
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
-      </div>
-      <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+      <button class="w-100 btn btn-lg btn-primary" type="submit" style="margin-top: 20px;" >Inscreva-se</button>
     </form>
   </main>
 
